--- a/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
@@ -16,6 +16,8 @@ hr{
     padding: 6px;
     height: 100%;
     width: 100%;
+    gap: 6px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
