17 - Correção de bug visual em botões por causa de seletor css na tag button.

--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,4 +1,4 @@
-button{
+.button{
     background-color: var(--carvao);
     border: var(--borda-branca);
     border-radius: 8px;
@@ -9,6 +9,6 @@ button{
     font-weight: 600;
 }
 
-button:active{
+.button:active{
     box-shadow: var(--sombra-in-clara), var(--sombra-ex-vermelha);
 }
