--- a/src/pages/cadastros-de-estoque/TipoMovimento/tipoMovimento.module.css
+++ b/src/pages/cadastros-de-estoque/TipoMovimento/tipoMovimento.module.css
@@ -8,7 +8,8 @@
     border: var(--borda-branca);
     border-width: 0 0 1px 0;
     p{
-        font-size: 1.7em;
+        font-size: 1.4em;
+        font-weight: 500;
         text-align: center;
     }
 }
