--- a/src/pages/configuracoes-de-produtos/Configuracoes-de-produtos.module.css
+++ b/src/pages/configuracoes-de-produtos/Configuracoes-de-produtos.module.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-   padding: 16px;
+    width: 100%;
+    padding: 16px;
+    padding-bottom: 150px; /* Adicione este padding para criar espaço no final */
 }
 
 .divBotao{
@@ -12,6 +14,10 @@
     justify-content: center;
     align-items: center;
     border-top: var(--borda-branca);
+    position: fixed;
+    bottom: 0; /* Alterado para 0 */
+    left: 0; /* Certifique-se de que o botão fique fixo ao rodapé */
+    background-color: var(--gunmetal);
 }
 
 .divFiltroEBusca{
@@ -23,4 +29,5 @@
     border-bottom: var(--borda-branca);
     padding-top: 8px;
     padding-bottom: 16px;
+    width: 100%;
 }
