--- a/src/components/ProductItem/productItem.module.css
+++ b/src/components/ProductItem/productItem.module.css
@@ -3,7 +3,7 @@
   background-color: var(--gunmetal);
   border: 1px solid var(--white);
   height: 75px;
-  width: 360px;
+  width: 100%;
   border-radius: 8px;
   /* transition: all 0.2s ease; */
   flex-direction: column;
