--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -3,7 +3,7 @@
     border: var(--borda-branca);
     border-radius: 8px;
     height: 65px;
-    width: 190px;
+    width: 100%;
     color: var(--white);
     box-shadow: var(--sombra-ex-vermelha);
     font-weight: 600;
