--- a/src/pages/configuracoes-de-estoque/unidade-de-medida-produto/unidadeMedidaProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/unidade-de-medida-produto/unidadeMedidaProduto.module.css
@@ -1,8 +1,10 @@
-.menu{
+.topBar{
     height: 65px;
  }
  
+ 
  .conteudoInicioTela{
+     display: flex;
      padding: 6px;
      height: 120px;
      gap: 6px;
