--- a/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
@@ -1,13 +1,15 @@
 .topBar{
    height: 65px;
+   position: fixed;
 }
 
 .conteudoInicioTela{
     display: flex;
     flex-direction: column;
     padding: 6px;
-    height: 120px;
+    height: 180px;
     gap: 8px;
+    justify-content: flex-end;
 }
 
 hr{
