--- a/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
@@ -18,7 +18,6 @@
     align-items: center;
     width: 100%;
     height: 100px;
-    padding-left: 80px;
-    padding-right: 80px;
     position: relative;
+    background-color: var(--gunmetal);
 }
