--- a/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
@@ -7,9 +7,19 @@
     flex-direction: column;
     gap: 24px;
     align-items: flex-start;
-    padding: 7px;
+    padding: 10px;
     width: 100%;
     height: 645px;
+    overflow-y: scroll;
+}
+
+.divUnidadeMedida{
+    border-radius: 12px;
+    border: 2px solid var(--white);
+    width: 100%;
+    height: fit-content;
+    padding: 10px;
+    background-color: var(--carvao);
 }
 
 .conteudoFinalTela{
