--- a/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
+++ b/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
@@ -32,3 +32,20 @@
     flex-direction: column;
     gap: 18px;
 }
+
+.divText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    background-color: var(--carvao);
+    width: 80%;
+    height: 100px;
+    font-size: 10px;
+}
+
+
+.divText > h4{
+
+}
