--- a/src/pages/login-e-entrada/Login/login.module.css
+++ b/src/pages/login-e-entrada/Login/login.module.css
@@ -1,12 +1,12 @@
 .login  {
-  height: 100%;
+  height: 812px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 56px;
-  padding: 8px 0;
+  gap: 45px;
+  padding: 8px 10px;
 }
 .login > form{
   display: flex;
@@ -15,6 +15,7 @@
   width: 100%;
   gap: 24px;
 }
+
 .login h1{
   text-shadow: var(--sombra-vermelha)
 }
