--- a/src/pages/cadastros-de-estoque/QuantidadeMovimento/quantidadeMovimento.module.css
+++ b/src/pages/cadastros-de-estoque/QuantidadeMovimento/quantidadeMovimento.module.css
@@ -21,6 +21,7 @@
     justify-content: center;
     gap: 24px;
     padding: 24px 16px;
+    height: 100%;
     p{
         font-size: 1.2em;
         font-weight: 600;
