--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -8,6 +8,7 @@
     box-shadow: var(--sombra-ex-vermelha);
     padding: 0px 16px;
     max-width: 80%;
+    min-width: 190px;
     font-weight: 600;
 }
 
