--- a/src/globals.css
+++ b/src/globals.css
@@ -68,7 +68,8 @@ body{
 }
 
 #root{
-    height: 100vh;
+    margin-top: 60px;
+    min-height: 812px;
     width: 375px;
     outline: 2px solid white;
     background: var(--gradiente);
