--- a/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
@@ -9,7 +9,7 @@
     align-items: flex-start;
     padding: 7px;
     width: 100%;
-    height: 645px;
+    height: 88%;
 }
 
 .conteudoFinalTela{
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 12%;
     position: relative;
     background-color: var(--gunmetal);
 }
