--- a/src/pages/configuracoes-de-categorias/ConfiguracoesCategoria.module.css
+++ b/src/pages/configuracoes-de-categorias/ConfiguracoesCategoria.module.css
@@ -1,6 +1,7 @@
 .divPrincipal{
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 24px;
    padding: 16px;
    padding-bottom: 150px;
