--- a/src/components/ProductItem/productItem.module.css
+++ b/src/components/ProductItem/productItem.module.css
@@ -26,6 +26,8 @@
   height: 60px;
   width: 60px;
 }
+.mainInfo > .profileImage{border-radius: 100%}
+
 .info{
   display: flex;
   flex-direction: column;
