Ajustes css top bar

--- a/src/pages/confirguracoes-de-unidade-medida/ConfiguracoesUnidadeMedida.module.css
+++ b/src/pages/confirguracoes-de-unidade-medida/ConfiguracoesUnidadeMedida.module.css
@@ -1,9 +1,11 @@
 .divPrincipal{
     display: flex;
     flex-direction: column;
-    gap: 24px;
-   padding: 16px;
+    gap: 8px;
+   padding: 8px;
+   height: 634px;
    width: 100%;
+   overflow-y: scroll;
 }
 
 .divBotao{
