--- a/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
@@ -29,5 +29,5 @@
     width: 100%;
     height: 100px;
     position: relative;
-    background-color: var(--gunmetal);
+    background-color: var(--gradiente);
 }
