--- a/src/pages/configuracoes-de-acesso/adicionando-colaborador/adicionandoColaborador.module.css
+++ b/src/pages/configuracoes-de-acesso/adicionando-colaborador/adicionandoColaborador.module.css
@@ -1,10 +1,11 @@
 .divPrincipal{
     width: 100%;
-    height: 100%;
+    height: 634px;
     display: flex;
     flex-direction: column;
     gap: 24px;
     padding: 16px;
+    overflow-y: scroll;
 }
 
 .divAdministrador{
