--- a/src/pages/configuracoes-de-estoque/criando-nova-categoria/criandoNovaCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/criando-nova-categoria/criandoNovaCategoria.module.css
@@ -19,5 +19,5 @@
     width: 100%;
     height: 113px;
     position: relative;
-    background-color: var(--gunmetal);
+    background-color: var(--gradiente);
 }
