--- a/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-categoria/editandoCategoria.module.css
@@ -20,5 +20,5 @@
     width: 100%;
     height: 113px;
     position: relative;
-    background-color: var(--gunmetal);
+    background-color: var(--gradiente);
 }
