--- a/src/pages/confirguracoes-de-unidade-medida/ConfiguracoesUnidadeMedida.module.css
+++ b/src/pages/confirguracoes-de-unidade-medida/ConfiguracoesUnidadeMedida.module.css
@@ -1,31 +1,28 @@
+.divFiltroEBusca{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 8px;
+}
 .divPrincipal{
     display: flex;
     flex-direction: column;
-    gap: 8px;
-   padding: 8px;
-   height: 634px;
-   width: 100%;
-   overflow-y: scroll;
+    justify-content: flex-start;
+    gap: 16px;
+    width: 100%;
+    height: 634px;
+    padding: 0 16px;
+    overflow-y: scroll;
 }
 
+
 .divBotao{
+    display: flex;
     width: 100%;
     height: 113px;
-    display: flex;
     justify-content: center;
     align-items: center;
     border-top: var(--borda-branca);
     position: relative;
-    background-color: var(--gunmetal);
-}
-
-.divFiltroEBusca{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    border-bottom: var(--borda-branca);
-    padding-top: 8px;
-    padding-bottom: 16px;
+    background-color: var(--gradiente);
 }
