--- a/src/pages/criando-novo-produto/CriandoProduto.module.css
+++ b/src/pages/criando-novo-produto/CriandoProduto.module.css
@@ -24,4 +24,5 @@
     justify-content: center;
     align-items: center;
     border-top: var(--borda-branca);
+    background-color: var(--gradiente);
 }
