--- a/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
+++ b/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
@@ -1,36 +1,51 @@
-.TextInput{
+/* .TextInput{
     display: flex;
     flex-direction: column;
     gap: 8px;
-}
+} */
 
-.divPerecivel{
+/* .divPerecivel{
     display: flex;
     align-items: center;
     gap: 16px;
-}
+} */
 
 .divPrincipal{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     gap: 24px;
-    padding: 16px;
+    width: 100%;
+    height: 634px;
+    padding: 0 16px;
+    overflow-y: scroll;
+
 }
 
 .divBotao{
+    display: flex;
     width: 100%;
     height: 113px;
-    display: flex;
     justify-content: center;
     align-items: center;
     border-top: var(--borda-branca);
-    
+    position: relative;
+    background-color: var(--gradiente);
 }
-
+/* 
 .divMeasumentTextInput{
     display: flex;
     flex-direction: column;
     gap: 18px;
+} */
+
+.divUnidadeMedida{
+    border-radius: 12px;
+    border: 2px solid var(--white);
+    width: 100%;
+    height: fit-content;
+    padding: 10px;
+    background-color: var(--carvao);
 }
 
 .divText{
@@ -41,10 +56,10 @@
     border-radius: 15px;
     border: var(--borda-branca);
     background-color: var(--carvao);
-    width: 95%;
+    width: 100%;
     height: 140px;
 }
 
-.divvMeasumentTextInput{
+/* .divvMeasumentTextInput{
     display: fl;
-}
+} */
