--- a/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
+++ b/src/pages/configuracoes-de-estoque/editando-unidade-de-medida/editandoUnidadeDeMedida.module.css
@@ -18,7 +18,7 @@
     border: 2px solid var(--white);
     width: 100%;
     height: fit-content;
-    padding: 10px;
+    padding: 8px 16px 8px 16px;
     background-color: var(--carvao);
 }
 
