--- a/src/pages/cadastros-de-estoque/NovoMovimento/novoMovimento.module.css
+++ b/src/pages/cadastros-de-estoque/NovoMovimento/novoMovimento.module.css
@@ -1,10 +1,21 @@
-.novoMovimento{
+/* .novoMovimento{
     display: flex;
     flex-direction: column;
     height: 100vh;
+} */
+
+.divPrincipal{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 8px;
+    width: 100%;
+    height: 540px;
+    padding: 8px 16px 8px 16px;
+    overflow-y: scroll;
 }
 
-.containerProdutos{
+/* .containerProdutos{
     width: 100%;
     padding: 8px 16px;
     display: flex;
@@ -14,7 +25,8 @@
     border: var(--borda-branca);
     border-width: 0 0 1px 0;
     overflow-y: scroll;
-}
+} */
+
 .avisoVazio{
     width: 100%;
     height: 100%;
@@ -26,10 +38,13 @@
 
 .botoes{
     display: flex;
+    width: 100%;
+    gap: 32px;
+    height: 199px;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
-    padding: 16px 0 32px 0;
-    background-color: var(--carvao);
-    width: 100%;
+    border-top: var(--borda-branca);
+    position: relative;
+    background-color: var(--gradiente);
 }
