--- a/src/pages/configuracoes-de-estoque/criando-nova-categoria/criandoNovaCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/criando-nova-categoria/criandoNovaCategoria.module.css
@@ -1,13 +1,13 @@
 .conteudoInicioTela{
     display: flex;
     flex-direction: column;
-    padding: 7px;
+    padding: 8px 16px 8px 16px;
     width: 100%;
     height: 144px;
 }
 
 .meioTela{
-    padding: 0 12px;
+    padding: 8px 16px 8px 16px;
     width: 100%;
     height: 490px;
     gap: 6px;
