--- a/src/pages/configuracoes-de-produtos/Configuracoes-de-produtos.module.css
+++ b/src/pages/configuracoes-de-produtos/Configuracoes-de-produtos.module.css
@@ -11,7 +11,7 @@
     gap: 8px;
     width: 100%;
     height: 634px;
-    padding: 0 16px;
+    padding: 8px 16px 8px 16px;
     overflow-y: scroll;
 }
 .divBotao{
