--- a/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
+++ b/src/pages/criando-unidade-medida/CriandoUnidadeMedida.module.css
@@ -17,7 +17,7 @@
     gap: 24px;
     width: 100%;
     height: 634px;
-    padding: 0 16px;
+    padding: 8px 16px 8px 16px;
     overflow-y: scroll;
 
 }
