--- a/src/pages/editando-produto/EditandoProduto.module.css
+++ b/src/pages/editando-produto/EditandoProduto.module.css
@@ -20,7 +20,7 @@
     gap: 24px;
     width: 100%;
     height: 634px;
-    padding: 0 16px;
+    padding: 8px 16px 8px 16px;
     overflow-y: scroll;
 }
 
