--- a/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/categoria-produto/categoriaProduto.module.css
@@ -1,8 +1,8 @@
 .conteudoInicioTela{
     display: flex;
     flex-direction: column;
-    padding: 6px;
-    height: 100px;
+    padding: 8px 16px 8px 16px;
+    height: 121px;
     gap: 8px;
     justify-content: flex-end;
 }
@@ -12,7 +12,7 @@ hr{
 }
 
 .conteudoTela{
-    padding: 6px;
+    padding: 8px 16px 8px 16px;
     height: 100%;
     width: 100%;
     gap: 6px;
