--- a/src/pages/configuracoes-de-estoque/Categoria/configuracoesCategoria/ConfiguracoesCategoria.module.css
+++ b/src/pages/configuracoes-de-estoque/Categoria/configuracoesCategoria/ConfiguracoesCategoria.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     gap: 8px;
+    padding: 8px;
 }
 .divPrincipal{
     display: flex;
@@ -24,4 +25,13 @@
     border-top: var(--borda-branca);
     position: relative;
     background-color: var(--gradiente);
+}
+
+.principal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 8px 8px;
 }
