--- a/src/components/SideMenu/sideMenu.module.css
+++ b/src/components/SideMenu/sideMenu.module.css
@@ -45,7 +45,7 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
-    padding: 20px;
+    padding: 8px 8px 10px 8px;
     align-items: center;
     /* border-top: 1px solid rgba(255, 255, 255, 0.2); */
     background-color:var(--carvao);
@@ -66,6 +66,7 @@
     flex-direction: column;
     text-align: start;
     font-family: var(--fonte-destaque);
+    padding: 6px;
 }
 
 .userName {
