--- a/src/pages/configuracoes/Configuracoes.module.css
+++ b/src/pages/configuracoes/Configuracoes.module.css
@@ -35,6 +35,8 @@
 }
 
 .ImportExport{
+    border: solid white;
+    border-width: 1px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
