--- a/src/pages/configuracoes/Configuracoes.module.css
+++ b/src/pages/configuracoes/Configuracoes.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 150vh;
+    height: 170vh;
     gap: 16px;
     width: 90%;
 }
@@ -35,11 +35,26 @@
 }
 
 .ImportExport{
-    border: solid white;
-    border-width: 1px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 5px;
-    gap: 5px;
+    gap: 20px;
+    margin: 5px 0 5px 0px;
+}
+
+.Export{
+    display: flex;
+    flex-direction: column;
+}
+
+.Import{
+    display: flex;
+    flex-direction: column;
+}
+
+.linha{
+    border: solid white;
+    border-width: 1px 0 0 0;
+    margin: 20px 0 20px 0;
 }
