--- a/src/pages/configuracoes-de-estoque/Produto/criandoNovoProduto/CriandoProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/Produto/criandoNovoProduto/CriandoProduto.module.css
@@ -1,9 +1,12 @@
-.TextInput{
+/* .TextInput{
     display: flex;
     flex-direction: column;
     gap: 8px;
-}
+} */
 
+.editarImagem{
+    margin: 0 4px;
+}
 .divPerecivel{
     display: flex;
     align-items: center;
@@ -13,8 +16,12 @@
 .divPrincipal{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     gap: 24px;
-    padding: 16px;
+    width: 100%;
+    height: 634px;
+    padding: 8px 16px 8px 16px;
+    overflow-y: scroll;
 }
 
 .divBotao{
