--- a/src/pages/configuracoes/Configuracoes.module.css
+++ b/src/pages/configuracoes/Configuracoes.module.css
@@ -3,7 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 170vh;
+    height: 100%;
+    /* background-color: aqua; */
+    margin-bottom: 20px;
+    padding-bottom: 20px;
     gap: 16px;
     width: 90%;
 }
