--- a/src/pages/cadastros-de-estoque/quantidadeMovimento/quantidadeMovimento.module.css
+++ b/src/pages/cadastros-de-estoque/quantidadeMovimento/quantidadeMovimento.module.css
@@ -7,6 +7,12 @@
     padding: 0 8px 16px 8px;
     border: var(--borda-branca);
     border-width: 0 0 1px 0;
+
+    /* display: flex; */
+    /* flex-direction: column; */
+    width: 100%;
+    /* padding: 8px 0px 0px 0px; */
+    /* gap: 8px; */
     p{
         font-size: 1.4em;
         font-weight: 500;
@@ -23,6 +29,7 @@
     border: var(--borda-branca);
     height: 100px;
     margin: 8px;
+    
     p{
         font-size: 1.2em;
         font-weight: 600;
@@ -31,22 +38,32 @@
 }
 
 .principal{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     gap: 24px;
     padding: 16px 16px;
     height: 520px;
+    overflow-y: scroll; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 24px;
+    width: 100%;
+    height: 480px;
+    padding: 8px 16px 8px 16px;
     overflow-y: scroll;
 }
 
 .containerBotao{
     display: flex;
+    width: 100%;
+    height: 100px;
     justify-content: center;
     align-items: center;
-    background-color: var(--gunmetal);
-    padding: 16px 0;
-    border: var(--borda-branca);
-    border-width: 1px 0 0 0;
+    border-top: var(--borda-branca);
+    position: relative;
+    background-color: var(--gradiente);
 }
