--- a/src/pages/tela-para-negar-delecao/TelaParaNegarDelecao.module.css
+++ b/src/pages/tela-para-negar-delecao/TelaParaNegarDelecao.module.css
@@ -1,11 +1,12 @@
-.divFiltroEBusca{
+.divFiltroEBusca {
     display: flex;
     flex-direction: column;
     width: 100%;
     gap: 8px;
     padding: 8px;
 }
-.divPrincipal{
+
+.divPrincipal {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -16,7 +17,7 @@
     overflow-y: scroll;
 }
 
-.divBotao{
+.divBotao {
     display: flex;
     width: 100%;
     height: 113px;
@@ -27,7 +28,7 @@
     background-color: var(--gradiente);
 }
 
-.principal{
+.principal {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,9 +37,24 @@
     padding: 8px 8px;
 }
 
-.instrucoes{
+.instrucoes {
     background-color: var(--carvao);
     padding: 10px;
     border: var(--borda-branca);
     border-radius: 12px;
+}
+
+.lista {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    >span {
+        margin-top: 20px;
+        text-decoration: underline;
+        text-decoration-color: white;
+        /* Define a cor do sublinhado */
+        /* text-decoration-style: dashed; */
+        /* Estilo do sublinhado */
+    }
 }
