--- a/src/pages/tela-para-negar-delecao/TelaParaNegarDelecao.module.css
+++ b/src/pages/tela-para-negar-delecao/TelaParaNegarDelecao.module.css
@@ -50,11 +50,11 @@
     gap: 8px;
 
     >span {
-        margin-top: 20px;
+        margin-top: 10px;
         text-decoration: underline;
         text-decoration-color: white;
         /* Define a cor do sublinhado */
-        /* text-decoration-style: dashed; */
+        text-decoration-style: dashed;
         /* Estilo do sublinhado */
     }
 }
