--- a/src/pages/configuracoes-de-estoque/Produto/configuracoesDeProdutos/ConfiguracoesDeProdutos.module.css
+++ b/src/pages/configuracoes-de-estoque/Produto/configuracoesDeProdutos/ConfiguracoesDeProdutos.module.css
@@ -2,17 +2,17 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 8px 0px 0px 0px;
+    padding: 8px 0 0 0;
     gap: 8px;
 }
 .divPrincipal{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 16px;
+    gap: 8px;
     width: 100%;
     height: 634px;
-    padding: 8px 16px 16px 16px;
+    padding: 4px 16px;
     overflow-y: scroll;
 }
 .divBotao{
