--- a/src/pages/configuracoes-de-estoque/Produto/configuracoesDeProdutos/ConfiguracoesDeProdutos.module.css
+++ b/src/pages/configuracoes-de-estoque/Produto/configuracoesDeProdutos/ConfiguracoesDeProdutos.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 8px 0 0 0;
+    padding: 8px 0 8px 0;
     gap: 8px;
 }
 .divPrincipal{
@@ -26,10 +26,11 @@
     background-color: var(--gradiente);
 }
 
-.barraDeBusca{
+.principal{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding-bottom: 8px;
+    align-items: center;
+    justify-content: center;
     gap: 8px;
+    padding: 0px 0 8px 0;
 }
