--- a/src/pages/configuracoes-de-estoque/UnidadeDeMedida/confirguracoesDeUnidadeMedida/ConfiguracoesUnidadeMedida.module.css
+++ b/src/pages/configuracoes-de-estoque/UnidadeDeMedida/confirguracoesDeUnidadeMedida/ConfiguracoesUnidadeMedida.module.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 8px 0 0px 0;
     gap: 8px;
 }
+
 .divPrincipal{
     display: flex;
     flex-direction: column;
@@ -24,4 +26,13 @@
     border-top: var(--borda-branca);
     position: relative;
     background-color: var(--gradiente);
+}
+
+.principal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 0px 0 8px 0;
 }
