Quantidade minima concluído

--- a/src/pages/configuracoes-de-estoque/Produto/criandoNovoProduto/CriandoProduto.module.css
+++ b/src/pages/configuracoes-de-estoque/Produto/criandoNovoProduto/CriandoProduto.module.css
@@ -7,10 +7,19 @@
 .editarImagem{
     margin: 0 4px;
 }
-.divPerecivel{
+.divCheck{
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     gap: 16px;
+}
+.divCheckQtd{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    > p{
+        width: 40%;
+    }
 }
 
 .divPrincipal{
