--- a/src/pages/cadastros-de-estoque/selecaoProdutos/selecaoProdutos.module.css
+++ b/src/pages/cadastros-de-estoque/selecaoProdutos/selecaoProdutos.module.css
@@ -5,7 +5,7 @@
     gap: 8px;
     width: 100%;
     height: 634px;
-    padding: 8px 16px 8px 16px;
+    padding: 16px 16px 8px 16px;
     overflow-y: scroll;
 }
 
@@ -22,6 +22,8 @@
     display: flex;
     flex-direction: column;
     border-width: 1px 0 1px 0;
+    gap: 8px;
+    padding: 8px 0px 8px 0px;
     overflow-y: scroll;
 }
 
