--- a/src/pages/historico-operacoes/historicoOperacoes.module.css
+++ b/src/pages/historico-operacoes/historicoOperacoes.module.css
@@ -17,7 +17,8 @@
 
 .principal{
     width: 100%;
-    padding: 16px 16px;
+    padding: 16px 8px 16px 0px;
+    /* padding: 16px 16px; */
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -25,8 +26,8 @@
     /* border: var(--borda-branca); */
     border-width: 1px 0 1px 0;
     overflow-y: scroll;
-    /* justify-content: center;
-    align-items: center; */
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .mensagem{
