Correção na imagem do usuário logado.

--- a/src/components/SideMenu/sideMenu.module.css
+++ b/src/components/SideMenu/sideMenu.module.css
@@ -60,6 +60,7 @@
         height: 60px;
         border-radius: 100%;
         border: 1px solid var(--white);
+        object-fit: cover;
     }
     .userName {
         font-size: 1.1em;
